# multicast

./: LICENSE  README.md  multicast.cabal  stack.yaml
client/: Main.hs
client/Client/: UI.hs
server/: Main.hs
src/: Multicast.hs
src/Multicast/: Command.hs
test/: MulticastSpec.hs
