name:                multicast
version:             0.1.0.0
synopsis:            Toy implementation of a multicast chat service.
description:         Please see README.md
homepage:            http://github.com/parsonsmatt/multicast
license:             BSD3
license-file:        LICENSE
author:              Matthew Parsons
maintainer:          parsonsmatt@gmail.com
copyright:           2016 Matthew Parsons
category:            Networks
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 7.10.3

library
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:     Multicast
  build-depends:       base >= 4.7 && < 5

executable multicast-server
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:      server
  main-is:             Main.hs
  build-depends:       base
                     , multicast

executable multicast-client
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:      server
  main-is:             Main.hs
  build-depends:       base
                     , multicast

test-suite spec
  default-language:    Haskell2010
  ghc-options:         -Wall
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , multicast
                     , hspec
                     , QuickCheck

source-repository head
  type:     git
  location: https://github.com/parsonsmatt/multicast
